updated the frontend code, gapi code, gapi tests, added the transaction mechanism for updating balance and added the renew access token mechanism for google oauth2 and self managed sessions
